--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     unfortunately,the breakout of covid-19 and political unrest in my country become.
     No wonder I paused going on tertiary education.However,I learned and studied all of essential abilities from online.I am able to speak and read three languages such as Thailand,Japanese and English.
     In opposed of it,I don't have any confidence to write at all.Now that I want to show you what I have done to code
-    which I started to learn very recently.
+    which I started to learn very recently.If you are interested in me,of course,you have a chance to keep in touch with me from this way.
 </h1>
 </div>
 <div class="col">
