--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-    <h1>
+   <h1>
     <div class="intro">
-    👋Hello,I am</div>
+    👋Hello,I am</div> 
     <br/>
     <div class="name">Htay Htay Thwe</div>
     <div class="para"> but you can friendly call me <span class="nickname">Kenzie</span> that is my Nickname.Let me tell a little bit about education and skills that I have done to learn.
@@ -63,18 +63,20 @@
     No wonder I paused going on tertiary education.However,I learned and studied all of essential abilities from online.I am able to speak and read three languages such as Thailand,Japanese and English.
     In opposed of it,I don't have any confidence to write at all.Now that I want to show you what I have done to code
     which I started to learn very recently.If you are interested in me,of course,you have a chance to keep in touch with me from this way.
-</h1>
+    </h1>
 </div>
 <div class="col">
     <img src="images/photo.jpg" class="mt-4 img-fluid p-2 border border-warning rounded" alt="my photo" width="500">
 </div>
 </div>
+</article>
 
-<button class="rounded">
+ <button class="rounded">
    <a href="mailto:htayhtaythwe962@gmai.com" class="text-decoration-none text-dark">Contact me</a>
 </button>
 </div>
 <br/>
+    <br/>
     <br/>
     <br/>
     <br/>
